--- a/src/App.css
+++ b/src/App.css
@@ -39,36 +39,51 @@ button {
   height: 100vh;
   width: 325px;
   max-width: 100vw;
-  background-color: rgba(214,211,240, 0.2);
   font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
 }
 
 .list {
   display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
   list-style: none;
-  flex-direction: column;
   margin: 0;
   padding: 0;
 }
 
-.list li {
-  margin: 10px;
-  align-self: center;
+/* Listing */
+.listing {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  width: calc(325px - 20px);
+  min-height: 325px;
+  text-align: center;
+  border: #0b3142 2px solid;
+  margin: auto;
+  padding: auto;
+  align-self: flex-start;
 }
 
-.list li button {
-  border: none;
-  background: transparent;
+.listingName {
+  width: 100%;
+  font-size: larger;
+}
+
+.listingPhoto img {
+  width: 50%;
+  max-width: 250px;
+  height: 50%;
+  max-height: 250px;
 }
 
 /* Filter Input */
 .filter {
-  width: calc(100% - 25px);
-  margin: 20px;
+  width: calc(325px - 20px);
+  margin: 10px 7px;
 }
 
 /* Error Messages */
