--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 /* Main Page */
 .App {
-  width: 100vw;
+  max-width: 100vw;
   height: calc(100vh - 25px);
   display: flex;
   align-content: center;
@@ -38,8 +38,8 @@ button {
 
 /* Map Container */
 .mapContainer {
-  width: 100vw;
-  height: calc(100vh - 25px);
+  max-width: 100vw;
+  height: calc(100vh - 52px);
 }
 
 /* List Style */
