style: Added Yelp logo to nav

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@
 }
 
 .mainHeader {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
   background-color: #0b3142;
   padding: 10px;
   margin: 0;
@@ -26,14 +29,14 @@
   margin: 0;
   color: #d6d3f0;
 }
-
-button {
-  position: absolute;
-  left: 10px;
-  top: 7px;
-  padding: 10px;
+.mainHeader button {
+  padding: 10px 15px;
   border: none;
   background-color: #c6b9cd;
+}
+
+.mainHeader a {
+  align-self: flex-end;
 }
 
 /* Map Container */
